public/assets/style.css
:root {
    --off-white: #faf9f6;
    --off-black: #313134;

    --blue: #8bb9ff;
    --blue-shadow: rgb(139, 185, 255, 0.5);
    --light-blue: #5ed0ff;
    --teal: #47e2d1;
    --light-teal: #9deee3;
    --pink: #ff9cb3;
    --dark-pink: #d07289;
    --green: #16c585;
}

@font-face {
    font-family: 'LexieReadable';
    src: url('./font/LexieReadable-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'LexieReadable';
    src: url('./font/LexieReadable-Bold.ttf') format('truetype');
    font-weight: bold;
    font-style: normal;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'LexieReadable', sans-serif;
    font-size: 18px;
    text-align: left;
    line-height: 1.5;
    color: var(--off-white);
    background-color: var(--off-black);
    min-width: 350px;
}

main {
    padding: 50px 20px;
}

.grid {
    justify-content: center;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 0.2fr));
    gap: 20px;
}

.card {
    text-align: left;
    padding: 0;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
    transition: transform 0.5s ease, box-shadow 0.5s ease;
}

.card:hover {
    transform: scale(1.05);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.8);
}

.cardinfo {
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 20px;
}

.card img {
    width: 100%;
    border-radius: 10px 10px 0 0;
}

.buy-btn-container {
    display: flex;
    gap: 20px;
    align-items: center;
}

/*********************************** Texts ***********************************/

h1 {
    color: var(--light-blue);
    text-align: center;
}

h2 {
    color: var(--teal);
}

h3 {
    color: var(--light-teal);
    margin-block-start: 1em;
    margin-block-end: 5px;
}

h4 {
    color: var(--dark-pink);
    margin-block-start: 0;
    margin-block-end: 0;
}

.card p {
    margin-block-start: 5px;
}

.add-to-cart-button {
    font-size: 1.2em;
    background-color: inherit;
    border: none;
    color: var(--pink);
    cursor: pointer;
    transition: color 0.5s ease;
}

.add-to-cart-button:hover {
    color: var(--green);
}

a {
    text-decoration: none;
    color: inherit;
}

/*********************************** Menu ************************************/

nav {
    background-color: var(--blue);
    position: fixed;
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0;
    top: 0;
    z-index: 2;
    box-shadow: 0 2px 5px var(--blue-shadow);
    color: var(--off-black);
}

#navigation, .users {
    gap: 30px;
    display: flex;
    align-items: center;
    cursor: pointer;
}

#navigation {
    padding-left: 20px;
    justify-content: flex-start;
}

#navigation a:hover {
    font-weight: bold;
}

.users {
    position: relative;
    padding-right: 20px;
    justify-content: flex-end;
}

.dropbtn {
    font-family: 'LexieReadable', sans-serif;
    background-color: inherit;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
    border-radius: 10px 10px 0 0;
    transition: background-color 0.4s ease;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    width: 100%;
    display: none;
    position: absolute;
    background-color: var(--blue);
    font-size: 0.78em;
    border-radius: 0 0 10px 10px;
    box-shadow: 0 2px 5px var(--blue-shadow);
    transition: display 0.5s ease;
    z-index: 1;
}

.users .dropdown-content {
    background-color: var(--off-white);
}

.dropdown-content a {
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    transition: background-color 0.5s ease;
}

.users .dropdown-content a:hover {
    background-color: #ddd;
}

.dropdown:hover .dropdown-content,
.dropdown:focus-within .dropdown-content {
    display: block;
}

.users .dropdown:hover .dropbtn,
.users .dropdown:focus-within .dropbtn {
    background-color: var(--light-teal);
}

.hamburger {
    display: none;
    height: 20px;
    cursor: pointer;
    margin-left: 20px;
    padding: 5px;
    z-index: 3;
}

.hamburger span {
    color: inherit;
}

@media screen and (max-width: 500px) {
    .hamburger {
        display: flex;
        justify-content: flex-start;
        align-items: center;
    }

    #navigation {
        display: none;
    }

    #navigation-open {
        position: absolute;
        top: 0;
        left: 0;
        display: flex;
        justify-content: center;
        align-items: center;
        flex-direction: column;
        width: 100vw;
        height: 100vh;
        margin: 0;
        padding: 0;
        gap: 20px;
        background-color: var(--blue);
    }
}

/******************************** Search Bar *********************************/

.search-bar {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    gap: 20px;
    flex-wrap: wrap;
}

.search-bar form {
    width: fit-content;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    gap: 20px;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
    flex-wrap: wrap;
}

.search-bar input {
    padding: 5px;
    border-radius: 5px;
    border: none;
    background-color: var(--off-white);
    color: var(--off-black);
}

.search-bar input:focus {
    outline: none;
    box-shadow: 0 0 5px var(--off-white);
}

.search-bar input::placeholder {
    color: var(--off-black);
}

.search-bar button[type="submit"] {
    padding: 10px;
    background-color: var(--pink);
    color: var(--off-black);
    cursor: pointer;
    font-weight: bold;
    border: none;
    border-radius: 20px;
    transition: background-color 0.5s ease, color 0.5s ease;
}

.search-bar button[type="submit"]:hover {
    background-color: var(--dark-pink);
    color: var(--off-white);
}

/******************************** Sign In/Up *********************************/

.auth {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    min-height: 80vh;
}

.authcontainer {
    gap: 20px;
    min-width: 300px;
    max-width: 0.3vw;
    height: fit-content;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
    border-radius: 10px;
}

.signinup {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    width: 100%;
}

#signin, #signup {
    width: 50%;
    text-align: center;
    padding: 10px;
    font-weight: bold;
    cursor: pointer;
}

#signin {
    border-radius: 10px 0 0 0;
}

#signup {
    border-radius: 0 10px 0 0;
}

.signform form {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 20px;
    padding: 20px;
}

.field {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.field label {
    width: 100%;
    text-align: left;
}

.field input {
    width: 100%;
    padding: 5px;
    border-radius: 5px;
    border: none;
    background-color: var(--off-white);
    color: var(--off-black);
}

.field input:focus {
    outline: none;
    box-shadow: 0 0 5px var(--off-white);
}

.field input::placeholder {
    color: var(--off-black);
}

.signform input[type="submit"] {
    width: 60%;
    padding: 10px;
    background-color: var(--pink);
    color: var(--off-black);
    cursor: pointer;
    font-weight: bold;
    border: none;
    border-radius: 20px;
    transition: background-color 0.5s ease, color 0.5s ease;
}

.signform input[type="submit"]:hover {
    background-color: var(--dark-pink);
    color: var(--off-white);
}

/*********************************** Profile *********************************/

#passwordChange .signform {
    width: 300px;
}

/*********************************** Vod *************************************/

.vod-infos {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: start;
    gap: 20px;
    flex-wrap: wrap;
}

.image-container {
    min-width: 300px;
    max-width: 30vw;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 20px;
}

.image-container img {
    width: 100%;
    border-radius: 10px;
}

.trailer-container {
    width: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

.trailer-container iframe {
    width: clamp(300px, 50%, 50%);
    display: block;
}

/*********************************** Cart ************************************/

.cart-page {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px;
}

.cart {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 20px;
}

.cart-tab {
    display: flex;
    align-items: center;
    flex-direction: column;
    border-top: 1px solid var(--off-white);
}

.cart-item {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 20px;
    margin: 0 20px;
    padding: 20px 0;
    border-bottom: 1px solid var(--off-white);
}

#total {
    padding: 20px;
    border: 1px solid var(--off-white);
    border-radius: 10px;
}

#total div {
    display: flex;
    align-items: center;
    justify-content: start;
    gap: 10px;
}

.buy-btn {
    width: 100%;
    background-color: inherit;
    color: var(--dark-pink);
    cursor: pointer;
    font-weight: bold;
    border: 2px solid var(--dark-pink);
    border-radius: 20px;
    padding: 10px 20px;
    transition: background-color 0.5s ease, color 0.5s ease;
}

.buy-btn:hover {
    background-color: var(--pink);
    border: 2px solid var(--pink);
    color: var(--off-black);
}

/********************************** Footer ***********************************/

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 30px;
    min-height: 50vh;
}

